--- a/DataBaseApi/DataBaseApi.csproj
+++ b/DataBaseApi/DataBaseApi.csproj
@@ -201,6 +201,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="XCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="msSqlDb.mdf">
