--- a/DataBase/DataBaseWinForms.csproj
+++ b/DataBase/DataBaseWinForms.csproj
@@ -161,12 +161,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frame.cs">
+    <Compile Include="View\ManyPersonFrame.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TableModel.cs" />
     <Compile Include="View\PersonCardView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -179,6 +178,7 @@
     <Compile Include="View\SinglePersonForm.Designer.cs">
       <DependentUpon>SinglePersonForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="XCommand.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
